traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cofrap
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend
          port: 80
    - match: PathPrefix(`/function`)
      kind: Rule
      services:
        - name: gateway
          namespace: openfaas
          port: 8080
